# prorco

./: pyproject.toml
src/prorco/: __init__.py  __main__.py  functions.py  main.py  type.py  utils.py
src/prorco.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/prorco.functions.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_functions.py
