[project]
name = "prorco"
description = "A tool to check whether given number is prime or composite."
version = "1.0.0"
authors = [
	{name = "Muhammad Altaaf", email = "taafuuu@gmail.com"}
]


# pyproject.toml
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
pythonpath = [
    "src"
]
testpaths = [
    "tests",
]


[project.scripts]
prorco = "prorco.main:main"
